# scutracing_wuren_gruop2

./: .gitignore  CHANGELOG.md  启动命令.txt
__MACOSX/gazebo_four_wheeled_vehicle/scripts/: ._test.py
gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/: package.xml
gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/include/: std_msg_vehicle_plugin.h
gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/launch/: simulation_harmonic.launch.py
gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/models/blue_cone/: model.sdf
gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/models/four_wheeled_vehicle/: model.config  model_harmonic.sdf  model_sensor.sdf
gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/models/four_wheeled_vehicle/install/: local_setup.sh  setup.sh
gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/models/four_wheeled_vehicle/log/: latest_build
gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/models/shixi/: model.config
gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/src/: odom_mapTF.cpp
nav_slam/: setup.py
nav_slam/launch/: 2dpoints.launch.py
nav_slam/nav_slam/: astar.py  map_process.py  map_pub.py  odom_map_tf.py  odom_tf_pub.py  perception_path_planner.py  points_pub_map.py  start_nav.py
ros_gz/ros_gz_bridge/: package.xml
ros_gz/ros_gz_image/: CHANGELOG.rst  package.xml
ros_gz/ros_gz_interfaces/: package.xml
ros_gz/ros_gz_sim_demos/: CHANGELOG.rst
ros_gz/ros_ign/: CHANGELOG.rst
ros_gz/ros_ign_bridge/: package.xml
ros_gz/ros_ign_gazebo/: CHANGELOG.rst
ros_gz/ros_ign_gazebo_demos/: package.xml
ros_gz/ros_ign_interfaces/: CHANGELOG.rst  package.xml
ros_gz/test_ros_gz_bridge/: package.xml
src/: CHANGELOG.md  README.md  启动命令.txt
src/fsd_common_msgs/: CMakeLists.txt  package.xml
src/fsd_common_msgs/msg/: Cone.msg
src/gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/: CMakeLists.txt
src/gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/models/yellow_cone/: model.sdf
src/gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/src/: odom_mapTF.cpp  std_msg_vehicle_plugin.cpp
src/gazebo_four_wheeled_vehicle/four_wheeled_vehicle_plugin/worlds/: 2d.world  race_track_harmonic.sdf
src/nav_slam/launch/: 2dpoints.launch.py
src/nav_slam/nav_slam/: astar.py  map_pub.py  points_pub_map.py  start_nav.py
src/ros_gz/ros_gz/: package.xml  (+1 more)
心得体会/: 心得体会-朱子远.md  心得体会-胡睿潇.md  心得体会-黄家裕.md  心得体体会-周宇扬.md
(+17 files in other folders)
